--- a/asdasd/Views/Products/Index.cshtml
+++ b/asdasd/Views/Products/Index.cshtml
@@ -6,6 +6,20 @@
 <div class="text-center">
     <h1 class="display-4">Налични Продукти (SQLite + EFCore)</h1>
     <hr />
+    <div class="row-mb-4">
+        <div class="col-md-6">
+            <form asp-action="Index" method="get" class="d-flex gap-2">
+                <input type="text"
+                       name="searchString"
+                       class="form-control"
+                       placeholder="Търси по име"
+                       value="@Context.Request.Query["searchString"]" />
+                
+                <button type="submit" class="btn btn-outline-primary">Търсене</button>
+                <a asp-action="Index" class="btn btn-outline-secondary">Отказ</a>
+            </form>
+        </div>
+    </div>
     <a asp-action="Create" class="btn btn-success mb-3">Добави нов продукт</a>
     <table class="table table-stripped table-bordered mt-4">
         <thead class="table-dark">
@@ -25,7 +39,9 @@
                 <td>@item.Price.ToString("C2")</td>
                 <td>
                     @* Бутон за изтриване *@
-                    <a asp-action="Delete" asp-route-id="Item.Id" class="btn btn-sm btn-primary">Изтриване</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Изтриване</a>
+                    
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Редактиране</a>
                 </td>
             </tr>
         }
