валидация, логин в appdbcontext

--- a/asdasd/Views/Products/Index.cshtml
+++ b/asdasd/Views/Products/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Списък Продукти";
 }
 <div class="text-center">
-    <h1 class="display-4">Налични Продукти (SQLite + EFCore)</h1>
+    <h1 class="display-4">Налични Продукти</h1>
     <hr />
     <div class="row-mb-4">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <form asp-action="Index" method="get" class="d-flex gap-2">
                 <input type="text"
                        name="searchString"
@@ -17,10 +17,10 @@
                 
                 <button type="submit" class="btn btn-outline-primary">Търсене</button>
                 <a asp-action="Index" class="btn btn-outline-secondary">Отказ</a>
+                <a asp-action="Create" class="btn btn-success mb-3">Добави нов продукт</a>
             </form>
         </div>
     </div>
-    <a asp-action="Create" class="btn btn-success mb-3">Добави нов продукт</a>
     <table class="table table-stripped table-bordered mt-4">
         <thead class="table-dark">
         <tr>
